--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,20 @@
 /* Note: an asteroid image is included in this repo.
 Feel free to use it if you like. */
 
+* {
+/*  border: 1px solid Blue !important;*/
+}
+
+body {
+  background-color: #999999;
+}
+
+.game-area {
+  background-color: #444444;
+  width: 100%;
+  height: 600px;
+}
+
+.enemy {
+  fill: orange;
+}
