--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,10 @@ body {
 }
 
 .game-area {
-  background-color: #444444;
+  background-image: url('../img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  /*background-color: #444444;*/
   width: 100%;
   height: 600px;
 }
@@ -23,4 +26,8 @@ body {
 
 .player {
   fill: green;
+}
+
+.enemy {
+  animation: spin 4s linear infinite;
 }
